feat(api): implemented airplane management endpoints
